[package]
name = "earthwyrm-bin"
description = "Vector tile map server using MVT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/earthwyrm/earthwyrm-bin"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
argh = "0.1"
axum = "0.7"
earthwyrm = { workspace = true }
env_logger = "0.10"
log = { workspace = true }
muon-rs = { workspace = true }
mvt = { workspace = true }
pointy = { workspace = true }
rosewood = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "earthwyrm"
path = "src/main.rs"
