[package]
name = "earthwyrm"
description = "Vector tile map widget for WebAssembly"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/earthwyrm"
repository = "https://github.com/DougLau/earthwyrm/tree/master/earthwyrm"
readme = "README.md"
keywords = ["cartography", "gis", "osm"]
categories = ["science::geo"]
version.workspace = true
edition.workspace = true

[dependencies]
