[package]
name = "earthwyrm"
description = "Vector tile map widget for WebAssembly"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/earthwyrm"
repository = "https://github.com/DougLau/earthwyrm/tree/master/earthwyrm"
readme = "README.md"
keywords = ["cartography", "gis", "osm"]
categories = ["science::geo"]
version.workspace = true
edition.workspace = true

[dependencies]
log = "0.4"
js-sys = "0.3"
percent-encoding = "2.3"
thiserror = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Headers',
  'Request',
  'RequestInit',
  'Response',
  'Window'
]
