[package]
name = "earthwyrm"
description = "Vector tile map widget for WebAssembly"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/earthwyrm"
repository = "https://github.com/DougLau/earthwyrm/tree/master/earthwyrm"
readme = "README.md"
keywords = ["cartography", "gis", "osm"]
categories = ["science::geo"]
version.workspace = true
edition.workspace = true

[dependencies]
futures = { version = "0.3", default-features = false }
hatmil.workspace = true
log = "0.4"
js-sys = "0.3"
percent-encoding = "2.3"
squarepeg.workspace = true
thiserror = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomRect',
  'Element',
  'Headers',
  'HtmlCollection',
  'PointerEvent',
  'Request',
  'Response',
  'WheelEvent',
  'Window'
]
