[package]
name = "wyrmcast"
description = "Vector tile map server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DougLau/earthwyrm/tree/master/wyrmcast"
categories = ["science::geo"]
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
argh = "0.1"
axum = "0.8"
env_logger = "0.11"
loam = "0.5"
log = "0.4"
muon-rs = "0.2"
mvt = "0.11"
pointy = "0.7"
rosewood = "0.5"
serde = "1.0"
squarepeg = "0.1"
osmpbfreader = "0.19"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "wyrmcast"
path = "src/main.rs"
